Wrap protection data values in table to prevent overflow.

--- a/samples/OrangeHasplayerDemo/css/main.css
+++ b/samples/OrangeHasplayerDemo/css/main.css
@@ -177,6 +177,10 @@ h1 {
     text-align: center;
 }
 
+.protection-value {
+    word-break: break-all;
+}
+
  /* ******************************************************** */
  /* ************  CONTROL BAR AND BUTTONS ****************** */
  /* ******************************************************** */
